Fix registration link cutoff on small screen size

--- a/src/css/section/home.css
+++ b/src/css/section/home.css
@@ -12,7 +12,7 @@
 #home::before {
   content: "";
   display: block;
-  height: 25vh;
+  height: 20vh;
 }
 
 #home > h1 {
@@ -30,12 +30,12 @@
   font-size: 15pt;
 }
 
-@media (max-height: 470px) {
+@media (max-height: 600px) {
   #home {
-    height: 470px;
+    height: 600px;
   }
 
   #home::before {
-    height: 25%;
+    height: 20%;
   }
 }
